--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,35 @@
 body {
     padding: 10px;
 }
-#header h1 {
-    padding: 0;
-    margin: 0;
-}
-
 .content {
-    margin: 10px;
+    padding: 10px;
 }
 
 h1 {
-    width: 100%;
+    margin-top: 0;
+}
+
+.header {
+    background-color: #fff;
+    padding-bottom: 20px;
+}
+
+.header p {
+    margin: 0;
 }
 
 .title {
-     display: block; width: 100%; background-color: #eee;
+    display: block; 
+    background-color: #eee;
+    padding: 5px;
+}
+
+.toggle {
+    cursor: pointer;
+}
+
+.footer {
+    font-size: 0.9em;
 }
 
 .scrollable-menu {
