--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,19 @@
 body {
     padding: 10px;
 }
-.content {
-    padding: 10px;
-}
-
-h1 {
-    margin-top: 0;
-}
-
-.header {
-    background-color: #fff;
-    padding-bottom: 20px;
-}
-
-.header p {
+#header h1 {
+    padding: 0;
     margin: 0;
 }
 
+.content {
+    margin: 10px;
+}
+
+h1 {
+    width: 100%;
+}
+
 .title {
-    display: block; 
-    background-color: #eee;
-    padding: 5px;
-}
-
-.toggle {
-    cursor: pointer;
-}
-
-.footer {
-    font-size: 0.9em;
-}
-
-.scrollable-menu {
-    height: auto;
-    max-height: 200px;
-    overflow-x: hidden;
+     display: block; width: 100%; background-color: #eee;
 }
